--- a/.env.production
+++ b/.env.production
@@ -2,4 +2,4 @@ REACT_APP_EMAILJS_PUBLIC_KEY=user_xMgIM2NgR2hImiFsk9Vqq
 REACT_APP_EMAILJS_PRIVATE_KEY=d6962d28e3c17c8faf93735b4f701f30
 REACT_APP_EMAILJS_TEMPLATE_ID=template_g9opz7q
 REACT_APP_EMAILJS_SERVICE_ID=service_eblk0ec
-REACT_APP_BACKEND_URL=https://portfolio-backend-chris.herokuapp.coms
+REACT_APP_BACKEND_URL=https://portfolio-backend-chris.herokuapp.com
